--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -7,9 +7,9 @@
 		<section class="follow">
 			<h2>Follow</h2>
 			<ul>
-				<li><a title="ML Blog" href="{{ site.ml_blog }}" target="_blank">LinkedIn</a></li>
-				<li><a title="Resum" href="{{ site.resume }}" target="_blank">Twitter</a></li>
-				<li><a title="Github" href="{{ site.github }}" target="_blank">Github</a></li>
+				<li><a title="ML Blog" href="{{ site.ml_blog }}" target="_blank">ml blog</a></li>
+				<li><a title="Resume" href="{{ site.resume }}" target="_blank">resume</a></li>
+				<li><a title="Github" href="{{ site.github }}" target="_blank">github</a></li>
 			</ul>
 		</section>
 	</div>
